--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "spendies-node-sdk",
+    "name": "spendies-sdk",
     "version": "1.0.0",
     "description": "NodeJS client for spendies-sdk",
-    "repository": "GIT_USER_ID/GIT_REPO_ID",
+    "repository": "robertvanmolken/spendies-sdk",
     "main": "dist/api.js",
     "types": "dist/api.d.ts",
     "scripts": {
         "clean": "rm -Rf node_modules/ *.js",
         "build": "tsc",
-        "test": "npm run build && node dist/client.js"
+        "test": "npm run build && node dist/api.js"
     },
     "author": "OpenAPI-Generator Contributors",
     "license": "Unlicense",
